# gnomeapp

./: README.md  meson.build
data/: meson.build  org.gnome.Example.desktop.in  org.gnome.Example.metainfo.xml.in
src/: main.js  meson.build  org.gnome.Example.data.gresource.xml  org.gnome.Example.in  org.gnome.Example.src.gresource.xml  window.js  window.ui
